--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ title: Liyao (李姚)
 SEOTitle: Liyao
 #header-img: img/post-bg-desk.jpg
 email: liyaol@yeah.net
-#description: "报君黄金台上意, 提携玉龙为君死"
+mboile: 131-6256-6039
+#description: ""
 keyword: "Liyao, 李姚"
 url: "https://liyaoplus.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -12,7 +13,7 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "天门中断楚江开"
-sidebar-avatar: /img/avatar-liyao.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-liyao-2.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -21,7 +22,7 @@ RSS: false
 # weibo_username:     qiubaiying
 #zhihu_username:     qiubaiying
 github_username:    liyaoplus
-mobile_username:    131-62566039
+mobile_username:    131-6256-6039
 address_username:    上海市闵行区东川路800号上海交通大学
 #facebook_username:  baiying.qiu.7
 #jianshu_username:   e71990ada2fd
