--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Liyao (李姚)
+#title: Liyao (李姚)
 SEOTitle: Liyao
 #header-img: img/post-bg-desk.jpg
 email: liyaol@yeah.net
-mboile: 131-6256-6039
-#description: ""
+mobile: 131-6256-6039
+#description: "TO BE FILLED"
 keyword: "Liyao, 李姚"
 url: "https://liyaoplus.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -12,8 +12,8 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "天门中断楚江开"
-sidebar-avatar: /img/avatar-liyao-2.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+#sidebar-about-description: "TO BE FILLED"
+sidebar-avatar: /img/avatar-liyao-1.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
