--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ address:    上海市闵行区东川路800号上海交通大学
 # weibo_username:     qiubaiying
 #zhihu_username:     qiubaiying
 cv_filename:        cv-Liyao.pdf
-mobile_username:    131-6256-6039
+#mobile:             131-6256-6039
 github_username:    liyaoplus
 #facebook_username:  baiying.qiu.7
 #jianshu_username:   e71990ada2fd
