--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/avatar-liyao-1.jpg      # use absolute URL, seeing it's use
 # SNS settings
 RSS: false
 email: liyaol@yeah.net
-address:    上海市闵行区东川路800号</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上海交通大学
+address:    上海市闵行区东川路800号</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上海交通大学
 # weibo_username:     qiubaiying
 #zhihu_username:     qiubaiying
 cv_filename:        cv-Liyao.pdf
