--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Liyao(李姚)
 SEOTitle: Liyao
 #header-img: img/post-bg-desk.jpg
 
-description: "穷则坚守底线, 达则心怀感恩"
+description: "To See the Far, the Further, the Furthest"
 #keyword: "Liyao, 李姚"
 url: "https://liyaoplus.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -12,8 +12,8 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 #sidebar-about-description: "TO BE FILLED"
-sidebar-avatar: /img/avatar-liyao-1.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
-
+#sidebar-avatar: /img/avatar-liyao-1.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/AtGuilin.jpg
 
 
 # SNS settings
