--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 sidebar: true                           # whether or not using Sidebar.
 #sidebar-about-description: "TO BE FILLED"
 #sidebar-avatar: /img/avatar-liyao-1.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
-sidebar-avatar: /img/AtGuilin.jpg
+#sidebar-avatar: /img/AtGuilin.jpg
+sidebar-avatar: /img/avatar_jiulihu.png
 
 
 # SNS settings
